src/components/cta-home/_cta-home.scss
.cta-home .section__content {
	// --background: hsl(var(--main-background-color));
	display: grid;
	// background: linear-gradient(
	// 	115deg,
	// 	transparent,
	// 	transparent,
	// 	var(--background)
	// );

	border-radius: 4rem;
	padding: 0;

	.wrapper {
		display: grid;
		row-gap: 1.6rem;
		align-content: center;
		padding: 3.2rem;

		.cta-heading {
			font-size: clamp(1.6rem, 16vw, 6.4rem);
			font-weight: 600;
			line-height: 1.33;

			.highlight {
				color: hsl(var(--base), 42%, 0.9);
			}

			.stripe {
				position: relative;
				display: inline-grid;
				margin-inline: 1.6rem;

				// Coloured rectangle behind word of last-child
				& span:first-child {
					display: list-item;
					color: transparent;
					grid-row: 1;
					grid-column: 1;
					background: hsl(var(--base), 45%, 0.6);
					transform: rotate(-5deg);
					width: 110%;
					margin-left: -5%;
					box-shadow: var(--shadow-elevation-low);
				}

				& span:last-child {
					mix-blend-mode: var(--invert-mix-blend-mode);
					grid-row: 1;
					grid-column: 1;
				}

				@-moz-document url-prefix() {
					align-items: center;
					line-height: 0.85;
				}
			}

			.text {
				font-size: 2.4rem;
				line-height: 1.8;

				.top {
					margin-bottom: -1em;
				}

				.bottom {
					margin-top: -1em;
				}
			}
		}
	}

	@media (min-width: $small) {
		&.split-view {
			div.right {
				$color-1: hsl(var(--base-h), 50%, 50%, 0.6);
				$color-2: hsl(calc(var(--base-h) + 20), 50%, 50%, 0.5);
				$color-3: hsl(calc(var(--base-h) - 20), 50%, 50%, 0.8);

				background: radial-gradient(ellipse at top, $color-1, transparent),
					radial-gradient(ellipse at left, transparent, $color-2),
					radial-gradient(ellipse at right, transparent, $color-3);

				mask-image: url("Images/abstracts/nature-group.svg");
				mask-repeat: no-repeat;
				mask-size: contain;
				mask-position: center bottom;
			}
		}
		.btn {
			width: max-content;
		}

		& .wrapper {
			.cta-heading {
				font-size: 6.4rem;
			}
		}
	}

	@media (min-width: $smedium) {
		grid-template-columns: 2fr 1fr;
	}

	@media (min-width: $medium) {
		grid-template-columns: 1fr 1fr;
	}
}

